--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "deploy": "cd contract && ./deploy.sh",
     "build": "npm run build:contract",
+    "build:factory": "cd factory && ./build.sh",
     "build:contract": "cd contract && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "cd contract && cargo test",
