WIP factory pattern. calling new. not handling 'then' yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,14 @@
 
 members = [
   "factory", 
-  "resource"
+  "resource", 
 ]
+
+[profile.release]
+codegen-units = 1
+opt-level = "z"
+lto = true
+debug = false
+panic = "abort"
+overflow-checks = true
+
