--- a/resource/Cargo.toml
+++ b/resource/Cargo.toml
@@ -13,3 +13,10 @@ uint = { version = "0.9.3", default-features = false }
 serde_json = "1.0.87"
 serde = { version = "1.0.147", features = ["derive"] }
 
+[profile.release]
+codegen-units = 1
+opt-level = "z"
+lto = true
+debug = false
+panic = "abort"
+overflow-checks = true
